# scouts-cli

./: .gitignore  AGENTS.md  Architecture.md  LICENSE  README.md  bootstrap  bulk_advance.py  demo-slide.html  pyproject.toml  scouts
chrome-extension/: manifest.json  popup.html  popup.js
scouts_cli/: __init__.py  __main__.py  config.py  context.py  main.py
scouts_cli/client/: __init__.py  auth.py  browser_auth.py  errors.py  scouting_client.py
scouts_cli/commands/: __init__.py  advancement.py  lookup.py  message.py  org.py  profile.py  reference.py  roster.py
scouts_cli/formatters/: __init__.py  human_formatter.py  json_formatter.py
scouts_cli/utils/: __init__.py  safety.py
